# rcpond

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  contributing.md  licence.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  installer.yml
business_logic/: RULES.md  compute_allocation_request.config  system_prompt_template.txt
business_logic/azure_requests/templates/email_templates/: approve.yaml.j2
business_logic/email_templates/: resubmit.yaml.j2
docs/: .pages  api.md  command_reference.md  configuration.md  index.md  licence.md  usage.md
evaluate/: evaluate_llm_options.qmd  readme.md
planning/: CLAUDE.md  Command.md  LLM.md  NextSteps.md  SN.md  ServiceNow.md  analytics.md  check-templates-command.md  combine-ticket-history.md  multiple-ticket-types.md  pr15-review-notes.md  sn.py
pre-commit-scripts/: check_secrets.py
scripts/: demo_display_response.py
src/: __main__.py
src/rcpond/: __init__.py  __main__.py  analytics.py  auth.py  cli.py  command.py  config.py  display.py  html_servicenow.py  llm.py  parse_html.py  prompt.py  servicenow.py  tool.py  tools.py
tests/: env.example  test_analytics.py  test_auth.py  test_check_secrets.py  test_command.py  test_config.py  test_display.py  test_llm.py  test_prompt.py  test_servicenow.py  test_tools.py
tests/fixtures/mock_templates/: mock_broken_schema_template.yaml.j2  mock_malformed_template.yaml.j2
tests/fixtures/prefix_templates/: _mock_partial.j2  _mock_partial.yaml.j2  mock_main_template.yaml.j2  mock_main_template_multi_dot.yaml.j2
tests/fixtures/working_templates/: mock_working_template.yaml.j2
