[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rcpond"
version = "0.1.1"
authors = [
  { name = "James Geddes", email = "jgeddes@turing.ac.uk" },
  { name = "Rosie Wood", email = "rwood@turing.ac.uk"},
  { name = "Fede Nanni", email = "nanni.federico@gmail.com"},
  { name = "Andy Smith", email = "andrewphilipsmith@users.noreply.github.com"},
]
description = "A tool to partly automate RCP requests"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
    "authlib>=1.3",
    "jinja2>=3.0",
    "requests>=2.32.5",
    "typer>=0.24.1",
    "xdg-base-dirs>=6.0.2",
]

[project.optional-dependencies]
html = [
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-typer>=0.0.3",
]


[project.urls]
Homepage = "https://github.com/alan-turing-institute/rcpond"
"Bug Tracker" = "https://github.com/alan-turing-institute/rcpond/issues"
Discussions = "https://github.com/alan-turing-institute/rcpond/discussions"
Changelog = "https://github.com/alan-turing-institute/rcpond/releases"

[project.scripts]
rcpond = "rcpond.cli:cli"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-m", "not integration"]
markers = [
  "integration: marks tests that require interaction with a live (Dev) ServiceNow instance. Running these test will make changes on the ServiceNow instance. (This group is deselected by default)",
]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["rcpond"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.13"
show_error_codes = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict = false


[tool.ruff]
src = ["src"]
exclude = []
line-length = 120  # how long you want lines to be

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
  "E501",   # Line too long
  "RET505"  # JG: My if's have else blocks and I like it that way.
]
unfixable = [
  "F401",   # Would remove unused imports
  "F841",   # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true  # allow unused *args/**kwargsisort.required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "pandas-stubs>=2.0",
    "pdoc>=16.0.0",
    "pre-commit",
    "pytest >=6",
    "pytest-cov >=3",
    "types-beautifulsoup4>=4.12",
    "types-requests>=2.32",
]
